# atoc_5815_mtn_wave

./: .gitignore  README.md  pyproject.toml
data_analysis_package/: anomaly.py  data_download.py  download_iterator.py  plotting.py  red_flag.py  run_analysis.py  statistical_analysis.py
examples/: test.ipynb  test2.ipynb
long_term_data_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
msfire_mtn_wave.egg-info/: PKG-INFO  SOURCES.txt
