[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "long-term-data-analysis"
version = "0.1.0"
description = "Analyzes data from weather stations over long time periods"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Michael Moench", email = "almo1024@colorado.edu"},
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
thresh = "msfire_mtn_wave.threshold_search:main"
timeseries = "msfire_mtn_wave.statistical_analysis:main"
anomaly = "msfire_mtn_wave.anomaly:main"